Javascript is acting weird but im slowly figuring it out.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
-<body>
+<head>
+<style link="index.css"></style>
+<script src="index.js"></script>
+</head>
+<body onload="load_food()">
+<h1>Exp Check</h1>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<select id="food_list" size="10">
+    <option> yy/mm/dd - Food Name </option>
+</select>
 
 </body>
 </html>
