added some more css

--- a/cordova/www_src/index.html
+++ b/cordova/www_src/index.html
@@ -21,11 +21,16 @@
 	<div id="toast">Error:</div>
 
 	<div class="buttons">
-		<button id="clear data button">Clear Data</button>
-		<button id="add food button">Add Food</button>
-		<button id="delete food button">Delete Food</button> <br>
+		
+		<button id="add_food_button">
+			<img 
+				class="icon" 
+				src="img/icon_add.svg"
+			></img></button>
+		<button id="delete food button">Delete</button>
+		<button id="clear_data_button">Clear Data</button>
 	</div>
-	<label for="search bar">Search: </label>
+	<label for="search bar"><img class="icon" src="img/search_icon.png"></label>
 	<input type="text" id="search bar"><br>
 	<label for="sorter">Sort By: </label>
 	<select id="sorter">
