app will run on android!

--- a/cordova/www/add_screen.html
+++ b/cordova/www/add_screen.html
@@ -2,35 +2,28 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<!--
-	Customize this policy to fit your own app's needs. For more guidance, see:
-		https://github.com/apache/cordova-plugin-whitelist/blob/master/README.md#content-security-policy
-	Some notes:
-		* gap: is required only on iOS (when using UIWebView) and is needed for JS->native communication
-		* https://ssl.gstatic.com is required only on Android and is needed for TalkBack to function properly
-		* Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
-			* Enable inline JS: add 'unsafe-inline' to default-src
-	-->
-	<meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
-	<meta name="format-detection" content="telephone=no">
-	<meta name="msapplication-tap-highlight" content="no">
-	<meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
-	<meta name="color-scheme" content="light dark">
-	<link rel="stylesheet" href="css/index.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Exp Check</title>
+	<link rel="stylesheet" href="css/global.css">
 	<link rel="stylesheet" href="css/datepicker.css">
+	<link rel="stylesheet" href="css/add_screen.css">
+	<link rel="stylesheet" href="css/toast.css">
 </head>
 <body>
 	<h1>Exp Check</h1>
+
+	<!-- The actual snackbar -->
+	<div id="toast">Error:</div>
+	<div class="buttons">
 	<button id="confirm button">Add Food</button>
 	<button id="cancel add button">Cancel</button><br>
-	<label for="name">Food Name</label><br>
+	</div>
+	<label for="name">Food Name</label>
 	<input type="text" id="name"><br>
 	
-	<label for="date">Expiration Date</label><br>
-	<input type="text" id="date">
+	<label for="date">Expiration Date</label>
+	<input type="text" id="date"><br>
 
-	<script src="cordova.js"></script>
 	<script src="js/datepicker.js"></script>
 	<script type="module" src="js/add_screen.js"></script>
 </body>
