--- a/cordova/www/index.html
+++ b/cordova/www/index.html
@@ -70,7 +70,13 @@
 		</button>
 		<button id="clear_data_button">Clear Data</button>
 	<div class="dropdown">
-	<button id="drp1" class="dropbtn"></button>
+	<button id="drp1" class="dropbtn">
+		<svg class="icon  icon--x" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+			<circle cx="50" cy="20" r="10" fill="white" />
+			<circle cx="50" cy="50" r="10" fill="white" />
+			<circle cx="50" cy="80" r="10" fill="white" />
+		</svg>
+	</button>
 		<div id="myDropdown" class="dropdown-content">
 		<a href="#">Add</a>
 		<a href="#">Delete</a>
