css is improving

--- a/cordova/www/index.html
+++ b/cordova/www/index.html
@@ -6,6 +6,7 @@
 	<meta name="format-detection" content="telephone=yes">
 	<meta name="msapplication-tap-highlight" content="no">
 	<meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
 	<meta name="color-scheme" content="light dark">
 
 	<title>Exp Check</title>
@@ -69,20 +70,18 @@
 			Delete
 		</button>
 		<button id="clear_data_button">Clear Data</button>
-	<div class="dropdown">
-	<button id="drp1" class="dropbtn">
-		<svg class="icon  icon--x" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-			<circle cx="50" cy="20" r="10" fill="white" />
-			<circle cx="50" cy="50" r="10" fill="white" />
-			<circle cx="50" cy="80" r="10" fill="white" />
-		</svg>
-	</button>
-		<div id="myDropdown" class="dropdown-content">
-		<a href="#">Add</a>
-		<a href="#">Delete</a>
-		<a href="#">Clear Data</a>
-		</div>
-	</div>
+		<button id="drp1" class="dropbtn">
+			<svg class="icon  icon--x" viewBox="0 0 30 100" xmlns="http://www.w3.org/2000/svg">
+				<circle cx="15" cy="20" r="10" fill="white" />
+				<circle cx="15" cy="50" r="10" fill="white" />
+				<circle cx="15" cy="80" r="10" fill="white" />
+			</svg>
+		</button>
+			<div id="myDropdown" class="dropdown-content">
+			<a href="#">Add</a>
+			<a href="#">Delete</a>
+			<a href="#">Clear Data</a>
+			</div>
 	</div>
 
 
