--- a/cordova/www/index.html
+++ b/cordova/www/index.html
@@ -11,91 +11,37 @@
 
 	<title>Exp Check</title>
 	
-	<link rel="stylesheet" href="css/global.css">
 	<link rel="stylesheet" href="css/index.css">
 	<link rel="stylesheet" href="css/toast.css">
-	<link rel="stylesheet" href="css/dropdown.css">
 </head>
 <body>
-	<!-- <h1>Exp Check</h1> -->
-
-	<!-- The actual snackbar -->
 	<div id="toast">Error:</div>
-
 	<div class="buttons">
 		<button id="add_food_button">
-			<svg class="icon  icon--plus" viewBox="0 0 80 80" xmlns="http://www.w3.org/2000/svg">
-				<path 
-					d="
-						M  30 00
-						h  20 
-						v  30 
-						h  30 
-						v  20 
-						h -30 
-						v  30 
-						h -20 
-						v -30 
-						h -30 
-						v -20 
-						h  30 
-						z
-					" 
-					fill="white" 
-				></path>
-			</svg> Add
+			<img class="icon icon--plus" src="img/plus_icon.svg"/>
+			Add
 		</button>
 		<button id="delete food button">
-					<svg class="icon  icon--x" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-				<path 
-					d="
-						M  00  20
-						L  20  00
-						L  50  30
-						L  80  00
-						L 100  20
-						L  70  50
-						L 100  80
-						L  80 100
-						L  50  70
-						L  20 100
-						L  00  80
-						L  30  50
-						L  00  20
-						Z
-					" 
-					fill="white" 
-				></path>
-			</svg>
+			<img class="icon  icon--x" src="img/x_icon.svg"/>
 			Delete
 		</button>
 		<button id="clear_data_button">Clear Data</button>
-		<button id="drp1" class="dropbtn">
-			<svg class="icon  icon--x" viewBox="0 0 30 100" xmlns="http://www.w3.org/2000/svg">
-				<circle cx="15" cy="20" r="10" fill="white" />
-				<circle cx="15" cy="50" r="10" fill="white" />
-				<circle cx="15" cy="80" r="10" fill="white" />
-			</svg>
+		<button id="menu" class="drop_down">
+			<img class="icon  icon--x" src="img/menu_icon.svg"/>
 		</button>
-			<div id="myDropdown" class="dropdown-content">
-			<a href="#">Add</a>
-			<a href="#">Delete</a>
-			<a href="#">Clear Data</a>
-			</div>
 	</div>
-
-
-	
-	<label for="search bar"><img class="icon" src="img/search_icon.png"></label>
+	<label for="search bar">
+		<img class="icon" src="img/search_icon.png">
+	</label>
 	<input type="text" id="search bar"><br>
 	<label for="sorter">Sort By: </label>
 	<select id="sorter">
 		<option value="food name">Food Name</option>
 		<option value="add date">Date Added</option>
 		<option value="exp date">Expiration Date</option>
-	  </select><br>
+	</select><br>
 
-	<table id="food data table">
+	<table id="food_data_table">
 		<thead>
 			<tr>
 				<th>Food Name</th>
@@ -103,9 +49,8 @@
 				<th>Expiration Date</th>
 			</tr>
 		</thead>
-		<tbody id="food data"> </tbody>
+		<tbody id="food_data"> </tbody>
 	</table>
 </body>
 <script type="module" src="js/index.js"></script>
-<script type="module" src="js/dropdown.js"></script>
 </html>
