ui is basically done. Need to figure out how to give notifications

--- a/cordova/www/index.html
+++ b/cordova/www/index.html
@@ -27,15 +27,17 @@
 			<img class="icon  icon--x" src="img/x_icon.svg"/>
 			Delete
 		</button>
-		<button id="clear_data_button">Clear Data</button>
-		<button id="menu" class="drop_down">
-			<img class="icon  icon--x" src="img/menu_icon.svg"/>
-		</button>
-		<div class="menu_content">
-			<a id="m_add_food">Add Food</a>
-			<a id="m_delete_food">Delete Food</a>
-			<a id="m_clear_data">Clear Data</a>
-		</div>
+		<button id="clear_data_button">Clear Data</button>		
+		<div id="div_drp_dwn" class="dropdown">
+			<button id="menu" class="dropbtn">
+				<img class="icon  icon--menu" src="img/menu_icon.svg"/>
+			</button>
+			<div id="myDropdown" class="dropdown-content">
+				<a id="m_add_food">Add Food</a>
+				<a id="m_delete_food">Delete Food</a>
+				<a id="m_clear_data">Clear Data</a>
+			</div>
+		</div> 
 	</div>
 		<label for="search bar">
 			<img class="icon" src="img/search_icon.png">
